deployment.yaml
kind: Deployment 
apiVersion: extensions/v1beta1
metadata:
  name: tf-test 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: tf-test
    spec:
      containers:
        - name: tf-test
          image: tensorflow/tensorflow:latest 
          ports:
            - containerPort: 8888 
          volumeMounts:
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: host-time
          hostPath:
            path: /etc/localtime
